<resources>
    <string name="app_name">HobiPedia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="my_events">My Events</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="register">Register</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="detail"><u>Detail</u></string>
    <string name="buat_event">Buat Event</string>
</resources>
