<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    android:background="@drawable/gradient_background_selector"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:src="@drawable/hobipedia_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_edit_text_state"
            android:drawableStart="@drawable/ic_perm_identity_24px"
            android:drawablePadding="17dp"
            android:hint="@string/nama_lengkap"
            android:inputType="textCapSentences"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="18dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_edit_text_state"
            android:drawableStart="@drawable/ic_mail_outline_24px"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="18dp"
            android:paddingTop="8dp"
            android:paddingEnd="18dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_edit_text_state"
            android:drawableStart="@drawable/ic_lock_outline_24px"
            android:drawablePadding="17dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="18dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_edit_text_state"
            android:drawableStart="@drawable/ic_lock_outline_24px"
            android:drawablePadding="17dp"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="18dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/buttonRegister"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:minHeight="42dip"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudah memiliki akun?"
            android:textColor="@color/md_white_1000"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:text="Login"
            android:textColor="@color/colorAccent"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>